@startuml
skinparam nodesep 50
skinparam ranksep 50
skinparam class {
  BackgroundColor<<interface>> #ffccff
  BackgroundColor<<abstract>> #ccccff
}

interface PdfDocumentGenerator {
    + generate() : PDDocument
}
abstract class PdfInvoiceDocumentGenerator implements PdfDocumentGenerator {
    ...
    + generate() : PDDocument
    # generateContent()
    {method} ...
}
class PdfInvoiceDocumentGeneratorDEde extends PdfInvoiceDocumentGenerator {
    ...
    + generate() : PDDocument
    # generateContent()
    {method} ...
}
together {
    abstract class PdfInvoiceBlockGenerator {}

    class PdfInvoiceReferenceBlockGenerator extends PdfInvoiceBlockGenerator {
        ...
            + generate() : PDDocument
            # generateItems()
            {method} ...
    }
    class PdfInvoiceItemsBlockGenerator extends PdfInvoiceBlockGenerator {
    ...
        + generate() : PDDocument
        # generateItems()
        {method} ...
    }

    class PdfInvoiceItemsTotalsBlockGenerator extends PdfInvoiceBlockGenerator{
    ...
        + generate() : PDDocument
        # generateItems()
        {method} ...
    }
}
PdfInvoiceDocumentGeneratorDEde .d.> PdfBlock : uses
PdfInvoiceDocumentGeneratorDEde .d.> PdfText : uses
PdfInvoiceDocumentGeneratorDEde .d.> PdfTextBox : uses
PdfInvoiceDocumentGeneratorDEde .d.> PdfLine : uss
PdfInvoiceDocumentGeneratorDEde .d.> PdfDimensions : uses
PdfInvoiceDocumentGeneratorDEde o-- PdfInvoiceReferenceBlockGenerator
PdfInvoiceDocumentGeneratorDEde o-- PdfInvoiceItemsBlockGenerator
PdfInvoiceDocumentGeneratorDEde o-- PdfInvoiceItemsTotalsBlockGenerator
PdfInvoiceReferencelockGenerator .d.> PdfBlock : uses
PdfInvoiceReferencelockGenerator .d.> PdfText : uses
PdfInvoiceReferenceBlockGenerator .d.> PdfDimensions : uses
PdfInvoiceItemsBlockGenerator .d.> PdfBlock : uses
PdfInvoiceItemsBlockGenerator .d.> PdfText : uses
PdfInvoiceItemsBlockGenerator .d.> PdfDimensions : uses
PdfInvoiceItemsTotalsBlockGenerator .d.> PdfBlock : uses
PdfInvoiceItemsTotalsBlockGenerator .d.> PdfText : uses
PdfInvoiceItemsTotalsBlockGenerator .d.> PdfLine : uses
PdfInvoiceItemsTotalsBlockGenerator .d.> PdfDimensions : uses
@enduml